# ingresos_egresos

./: README.md  pyproject.toml
ingresos_egresos/: hooks.py  modules.txt  patches.txt
ingresos_egresos/fixtures/: ie_codigo.json
ingresos_egresos/ingresos_y_egresos/custom/: branch.json
ingresos_egresos/ingresos_y_egresos/doctype/ie_codigo/: ie_codigo.js  ie_codigo.json  ie_codigo.py  test_ie_codigo.py
ingresos_egresos/ingresos_y_egresos/doctype/ie_codigo_detalle/: ie_codigo_detalle.json  ie_codigo_detalle.py
ingresos_egresos/ingresos_y_egresos/doctype/ie_configuracion/: ie_configuracion.js  ie_configuracion.json  ie_configuracion.py
ingresos_egresos/ingresos_y_egresos/doctype/ie_movimientos_vinculados/: ie_movimientos_vinculados.json  ie_movimientos_vinculados.py
ingresos_egresos/ingresos_y_egresos/doctype/movimiento/: movimiento.js  movimiento.json  movimiento.py  test_movimiento.py
ingresos_egresos/ingresos_y_egresos/doctype/registro_de_cierre_de_movimiento/: registro_de_cierre_de_movimiento.js  registro_de_cierre_de_movimiento.json  registro_de_cierre_de_movimiento.py  registro_de_cierre_de_movimiento_calendar.js  test_registro_de_cierre_de_movimiento.py
ingresos_egresos/ingresos_y_egresos/page/dashboard_movimientos/: dashboard_movimientos.js  dashboard_movimientos.json  dashboard_movimientos.py
ingresos_egresos/ingresos_y_egresos/print_format/formato_cierre_oficial/: formato_cierre_oficial.html  formato_cierre_oficial.json
ingresos_egresos/patches/v1_0/: backfill_multi_currency_fields.py  update_cierre_saldo_final.py
(+10 files in other folders)
