[project]
name = "ingresos_egresos"
authors = [
    { name = "Ernesto Ruiz", email = "eruiz@wbapps.ocm"}
]
description = "App para llevar control de Ingresos y Egresos"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "erpnext>=15.0.0"
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
